--- a/src/style.css
+++ b/src/style.css
@@ -19,6 +19,20 @@ body {
     background-color: rgba(255, 255, 255, .25);
 }
 
+.color-white-50 {
+    background-color: rgba(255, 255, 255, .5);
+}
+.bg-white-50 {
+    background-color: rgba(255, 255, 255, .5);
+}
+
 .bg-white-60 {
     background-color: rgba(255, 255, 255, .6);
+}
+
+
+.absolute-center {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
 }
