全局样式命名规范

--- a/src/style.css
+++ b/src/style.css
@@ -15,67 +15,20 @@ body {
     padding: 0;
 }
 
-.bg-white-25 {
-    background-color: rgba(255, 255, 255, .25);
-}
-
-.color-white-50 {
-    background-color: rgba(255, 255, 255, .5);
-}
-
-.bg-white-50 {
-    background-color: rgba(255, 255, 255, .5);
-}
-
-.bg-white-60 {
-    background-color: rgba(255, 255, 255, .6);
-}
-
-
-:deep(.el-dialog) {
-    max-width: 600px;
-    width: 90%;
-    background-color: rgb(245, 245, 245) !important;
-    border-radius: 10px;
-    overflow: hidden;
-    box-shadow: rgb(0 0 0 / 5%) 0 10px 20px;
-}
-
-:deep(.el-dialog__body) {
-    padding: 35px;
-    max-height: 350px;
-    overflow: auto;
-}
-
-:deep(.el-dialog__body) {
-    padding: 15px 35px 0;
-}
-
-:deep(.el-dialog__body::-webkit-scrollbar) {
-    display: none
-}
-
-/*屏幕小于768的时候*/
-@media (max-width: 640px) {
-    :deep(.el-dialog__body) {
-        padding: 15px 20px 0;
-    }
-}
-
-/*精简版*/
-.mini-text-color {
-    color: rgba(0, 0, 0, .7) !important;
-}
-
-/*精装*/
-.blur-text-color {
-    color: rgba(255, 255, 255, .9) !important;
-}
-
 .primary-color {
     color: #409eff !important;
 }
 
-.info-text-color {
+.prefix-text-color {
     color: rgba(0, 0, 0, .35) !important;
+}
+
+/*极简*/
+.simple-text-color {
+    color: rgba(0, 0, 0, .7) !important;
+}
+
+/*标准*/
+.norm-text-color {
+    color: rgba(255, 255, 255, .9) !important;
 }
